--- a/globals.css
+++ b/globals.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
+html {
+    scroll-behavior: smooth;
+}
+
 #notSelect {
     -webkit-touch-callout: none;  /* iPhone OS, Safari */
     -webkit-user-select: none;    /* Chrome, Safari 3 */
@@ -11,3 +15,25 @@
     -ms-user-select: none;        /* IE10+ */
     user-select: none;            /* Possível implementação no futuro */
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #393F49;
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px #5b6575;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #10B981;
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #0B895F;
+  }
